--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-html
 <!doctype html>
 <html lang="en">
 <head>
@@ -11,6 +10,10 @@ html
 </head>
 <body>
 <div class="container">
+    <div id="counter-container">
+        <p id="counter">0</p>
+        <button id="clickButton">КЛИК</button>
+    </div>
     <div class="menu">
         <ul>
             <li><a href="#">Friends</a></li>
@@ -21,5 +24,12 @@ html
     </div>
 </div>
 
+<script>
+    let count = 0;
+    document.getElementById("clickButton").addEventListener("click", function() {
+        count++;
+        document.getElementById("counter").innerText = count;
+    });
+</script>
 </body>
 </html>
